updated CAS