@@ -4,8 +4,8 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <artifactId>server</artifactId>
         <groupId>ch.elca</groupId>
+        <artifactId>candidateassess-server</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
 
@@ -25,10 +25,14 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-actuator</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
 
     <build>
-        <finalName>${build.final-name}-${project.version}</finalName>
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
@@ -46,4 +50,67 @@
             </plugin>
         </plugins>
     </build>
+
+    <profiles>
+        <profile>
+            <id>docker-build</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>com.google.cloud.tools</groupId>
+                        <artifactId>jib-maven-plugin</artifactId>
+                        <version>${jib-maven-plugin.version}</version>
+                        <executions>
+                            <execution>
+                                <phase>package</phase>
+                                <goals>
+                                    <goal>build</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                        <configuration>
+                            <from>
+                                <image>docker-remote.artifactory.svc.elca.ch/eclipse-temurin:11-jre-alpine</image>
+                                <auth>
+                                    <username>${env.REPOSITORY_USERNAME}</username>
+                                    <password>${env.REPOSITORY_PASSWORD}</password>
+                                </auth>
+                            </from>
+                            <to>
+                                <image>${containerImageName}</image>
+                                <auth>
+                                    <username>${env.REPOSITORY_USERNAME}</username>
+                                    <password>${env.REPOSITORY_PASSWORD}</password>
+                                </auth>
+                                <tags>
+                                    <tag>${containerImageVersion}</tag>
+                                </tags>
+                            </to>
+                            <container>
+                                <environment>
+                                    <TZ>Europe/Zurich</TZ>
+                                    <SERVER_PORT>8080</SERVER_PORT>
+                                </environment>
+                                <jvmFlags>
+                                    <!-- For Hazelcast access to Java internal API -->
+                                    <jvmFlag>--add-modules=java.se</jvmFlag>
+                                    <jvmFlag>--add-exports=java.base/jdk.internal.ref=ALL-UNNAMED</jvmFlag>
+                                    <jvmFlag>--add-opens=java.base/java.lang=ALL-UNNAMED</jvmFlag>
+                                    <jvmFlag>--add-opens=java.base/java.nio=ALL-UNNAMED</jvmFlag>
+                                    <jvmFlag>--add-opens=java.base/sun.nio.ch=ALL-UNNAMED</jvmFlag>
+                                    <jvmFlag>--add-opens=java.management/sun.management=ALL-UNNAMED</jvmFlag>
+                                    <jvmFlag>--add-opens=jdk.management/com.sun.management.internal=ALL-UNNAMED
+                                    </jvmFlag>
+                                </jvmFlags>
+                                <ports>
+                                    <port>8080</port>
+                                </ports>
+                            </container>
+                            <allowInsecureRegistries>true</allowInsecureRegistries>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+    </profiles>
 </project>
